--- a/css/styles.css
+++ b/css/styles.css
@@ -3,100 +3,16 @@
 }
 
 body {
-  display: flex;
   width: 88%;
   max-width: 30em;
-  height: 100vh;
-  margin: 0 auto;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin: 1em auto;
   text-align: center;
-  font-family: sans-serif;
 }
 
-button {
-  text-transform: none;
-  overflow: visible;
-  -webkit-appearance: button;
+p {
+  margin: 0;
 }
 
-.btn {
-  display: inline-block;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: .375rem .75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: .25rem;
-  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-}
-
-.btn:disabled {
-  opacity: .65;
-}
-
-.btn:not(:disabled) {
-  cursor: pointer;
-}
-
-.btn-primary,
-.btn-primary:hover,
-.btn-primary:not(:disabled):active,
-.btn-primary:disabled {
-  color: #fff;
-}
-
-.btn-primary {
-  border-color: #007bff;
-  background-color: #007bff;
-}
-
-.btn-primary:hover {
-  background-color: #0069d9;
-  border-color: #0062cc;
-}
-
-.btn-primary:not(:disabled):active {
-  background-color: #0062cc;
-  border-color: #005cbf;
-}
-
-.btn-primary:disabled {
-  background-color: #007bff;
-  border-color: #007bff;
-}
-
-.btn-lg {
-  padding: .5rem 1rem;
-  border-radius: .3rem;
-  line-height: 1.5;
-  font-size: 1.25rem;
-}
-
-.db {
-  display: block;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.mt0 {
-  margin-top: 0;
-}
-
-.mb4 {
-  margin-bottom: 2rem;
-}
-
-.f1 {
-  font-size: 3rem;
+#app {
+  font-size: 2em;
 }
