--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,22 @@ body {
   text-align: center;
 }
 
-p {
-  margin: 0;
+.di {
+  display: inline;
 }
 
-#app {
-  font-size: 2em;
+.ma1 {
+  margin: .25rem;
+}
+
+.f1 {
+  font-size: 3rem;
+}
+
+.f2 {
+  font-size: 2.25rem;
+}
+
+.f3 {
+  font-size: 1.5rem;
 }
